Reorganized java options settings